--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fbssi",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "find broken SSI",
   "main": "index.js",
   "bin": {
@@ -13,8 +13,8 @@
     "SSI"
   ],
   "repository": {
-    type: "git",
-    url: "https://github.com/OsukeUesugi/fbssi.git"
+    "type": "git",
+    "url": "https://github.com/OsukeUesugi/fbssi.git"
   },
   "author": "",
   "license": "MIT",
