--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fbssi",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "find broken SSI",
   "main": "index.js",
   "bin": {
-    "fbs": "./index.js"
+    "fbssi": "./index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
